edited html & css

--- a/Index.html
+++ b/Index.html
@@ -10,12 +10,9 @@
 </head>
 
 <body>
-    <!--Image-->
-<nav class="herosection" style="width:40%">
-    <div class="hero"></div>
-</nav>
-    <!--Page Content-->
-    <div class="main-page" style="margin-left:40%">
+    <section class="hero_section" style="width:40%"></section>
+
+    <div class="main_page" style="margin-left:40%">
         <header class="header">
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
                 <nav>
