added flexbox and changed image to contain

--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <section class="hero_section" style="width:40%"></section>
+    <div class="first_row">
+        <section class="hero_section"></section>
 
-    <div class="main_page" style="margin-left:40%">
         <header class="header">
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
                 <nav>
@@ -24,6 +24,7 @@
                     </ul>
                 </nav>
         </header>
+        </div>
     </div>
 </body>
 </html>
