edited html & css

--- a/Index.html
+++ b/Index.html
@@ -10,20 +10,55 @@
 </head>
 
 <body>
-    <div class="first_row">
-        <section class="hero_section"></section>
-
-        <header class="header">
+    <div class="hero"></div>
+    <div class="page-content">
+        <header>
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
                 <nav>
                     <ul>
                         <li> <a href="#about">About</a></li>
                         <li> <a href="#work">Work</a></li>
                         <li> <a href="#resume">Resume</a></li>
-                        <li> <a href="#contect">Contact</a></li>
+                        <li> <a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
         </header>
+            <article>
+                <div class="philosophy-1">
+                    <p>
+                        Efficiency is beauty
+                    </p>
+                </div>
+                <div class="philosophy-2">
+                    <p>
+                        Progress is hope
+                    </p>
+                </div>
+            </article>
+            <article id="about" class="aboutsection">
+                <h2 class="About"><b>About</b></h2>
+                    <p2 class="p2">
+                        This is a paragraph of text about me. I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I've had the opportunity to play several Star City Games Invitationals, my best placement being top 16 in 2018. I then qualified for the Pro Tour in 2020, and placed in the top 100 competitors in the "Americas" region of that event. I aspire to one day win the world championship.
+                    </p2>
+            </article>
+            <article id="work" class="worksection">
+                <h2 class="Work"><b>Work</b></h2>
+                    <p2>
+                        This is where links to my projects go.
+                    </p2>
+            </article>
+            <article id="resume" class="resumesection">
+                <h2 class="Resume"><b>Resume</b></h2>
+                    <p2>
+                        This is where my resume goes.
+                    </p2>
+            </article>
+            <article id="contact" class="contactsection">
+                <h2 class="Contact"><b>Contact</b></h2>
+                    <p2>
+                        This is where my contact information goes. 
+                    </p2>
+            </article>
     </div>
 </body>
 </html>
