--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
             <article id="about" class="aboutsection">
                 <h2 class="About"><b>About</b></h2>
                     <p2 class="p2">
-                        This is a paragraph of text about me. I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I've had the opportunity to play several Star City Games Invitationals, my best placement being top 16 in 2018. I then qualified for the Pro Tour in 2020, and placed in the top 100 competitors in the "Americas" region of that event. I aspire to one day win the world championship.
+                        I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I've had the opportunity to play several Star City Games Invitationals, my best placement being top 16 in 2018. I then qualified for the Pro Tour in 2020 ("Players Tour Series 1: Americas"), and placed in the top 100 competitors of that event. I aspire to one day win the world championship.
                     </p2>
             </article>
             <article id="work" class="worksection">
