Edited html & css

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="hero"></div>
     <div class="page-content">
-        <header>
+        <header class="header">
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
                 <nav>
                     <ul>
