Edited html & css

--- a/Index.html
+++ b/Index.html
@@ -55,10 +55,17 @@
             </article>
             <article id="contact" class="contactsection">
                 <h2 class="Contact"><b>Contact</b></h2>
-                    <p2>
-                        This is where my contact information goes. 
-                    </p2>
             </article>
+        <footer class="footer"></footer>
+            <nav>
+                <ul>
+                    <li> <a href="tel:+6124327545">612-432-7545</a></li>
+                    <li> <a href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
+                    <li> <a href="https://github.com/bkorbsquare">Github</a></li>
+                    <li> <a href="https://www.facebook.com/brandon.krussow">Facebook</a></li>
+                </ul>
+            </nav>
+        </footer>
     </div>
 </body>
 </html>
