added resume image

--- a/Index.html
+++ b/Index.html
@@ -50,13 +50,13 @@
             <article id="resume" class="resumesection">
                 <h2 class="Resume"><b>Resume</b></h2>
                     <p2>
-                        This is where my resume goes.
+                        <img src="bkrussowresume.jpg" alt="Resume document">
                     </p2>
             </article>
             <article id="contact" class="contactsection">
                 <h2 class="Contact"><b>Contact</b></h2>
             </article>
-        <footer class="footer"></footer>
+        <footer class="footer">
             <nav>
                 <ul>
                     <li> <a href="tel:+6124327545">612-432-7545</a></li>
