Troubleshooting resume image

--- a/Index.html
+++ b/Index.html
@@ -49,9 +49,7 @@
             </article>
             <article id="resume" class="resumesection">
                 <h2 class="Resume"><b>Resume</b></h2>
-                    <p2>
-                        <img src="bkrussowresume.jpg" alt="Resume document">
-                    </p2>
+                   <img src="bkrussowresume.jpg" alt="resume picture">
             </article>
             <article id="contact" class="contactsection">
                 <h2 class="Contact"><b>Contact</b></h2>
