added a hover element & css animations

--- a/index.html
+++ b/index.html
@@ -49,21 +49,23 @@
             </article>
             <article id="resume" class="resumesection">
                 <h2 class="Resume"><b>Resume</b></h2>
-                   <img src="assets/images/bkrussowresume.jpg" alt="resume picture">
+                    <a href="assets/images/bkrussowresume.jpg" download>
+                        <img src="assets/images/bkrussowresume.jpg" alt="resume picture">
+                    </a>
             </article>
-            <article id="contact" class="contactsection">
-                <h2 class="Contact"><b>Contact</b></h2>
-            </article>
+        <article id="contact">
         <footer class="footer">
-            <nav>
-                <ul>
-                    <li> <a href="tel:+6124327545">612-432-7545</a></li>
-                    <li> <a href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
-                    <li> <a href="https://github.com/bkorbsquare">Github</a></li>
-                    <li> <a href="https://www.facebook.com/brandon.krussow">Facebook</a></li>
-                </ul>
-            </nav>
+            <h2 class="Contact"><b>Contact</b></h2>
+                <nav>
+                    <ul>
+                        <li> <a href="tel:+6124327545">612-432-7545</a></li>
+                        <li> <a href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
+                        <li> <a href="https://github.com/bkorbsquare">Github</a></li>
+                        <li> <a href="https://www.facebook.com/brandon.krussow">Facebook</a></li>
+                    </ul>
+                </nav>
         </footer>
+        </article>
     </div>
 </body>
 </html>
