--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I qualified the Pro Tour in 2020 ("Players Tour Series 1: Americas"), and placed in the top 100 competitors of that event. I aspire to one day win the world championship.
                     </p2>
             </article>
+            <div class="banner"></div>
             <article id="work" class="worksection">
                 <h2 class="Work"><b>Work</b></h2>
                     <p2>
@@ -53,18 +54,18 @@
                         <img src="assets/images/bkrussowresume.jpg" alt="resume picture">
                     </a>
             </article>
-        <article id="contact">
-        <footer class="footer">
-            <h2 class="Contact"><b>Contact</b></h2>
-                <nav>
-                    <ul>
-                        <li> <a href="tel:+6124327545">612-432-7545</a></li>
-                        <li> <a href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
-                        <li> <a href="https://github.com/bkorbsquare">Github</a></li>
-                        <li> <a href="https://www.facebook.com/brandon.krussow">Facebook</a></li>
-                    </ul>
-                </nav>
-        </footer>
+            <article id="contact">
+            <footer class="footer">
+                <h2 class="Contact"><b>Contact</b></h2>
+                    <nav>
+                        <ul>
+                            <li> <a href="tel:+6124327545">612-432-7545</a></li>
+                            <li> <a href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
+                            <li> <a href="https://github.com/bkorbsquare">Github</a></li>
+                            <li> <a href="https://www.facebook.com/brandon.krussow">Facebook</a></li>
+                        </ul>
+                    </nav>
+            </footer>
         </article>
     </div>
 </body>
