Added and styled banner images

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="banner"></div>
             <article id="work" class="worksection">
                 <h2 class="Work"><b>Work</b></h2>
-                    <p2>
-                        This is where links to my projects go.
-                    </p2>
+                <a href="https://github.com/bkorbsquare/Module-1-Challenge">
+                    <img src="" alt="website screenshot">
+                </a>
             </article>
             <article id="resume" class="resumesection">
                 <h2 class="Resume"><b>Resume</b></h2>
