editing html & css

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             <article id="work" class="worksection">
                 <h2 class="Work"><b>Work</b></h2>
                 <a href="https://github.com/bkorbsquare/Module-1-Challenge">
-                    <img src="" alt="website screenshot">
+                    <img class="m1img" src="assets/images/challenge1index.jpg" alt="website screenshot of code">
                 </a>
             </article>
             <article id="resume" class="resumesection">
                 <h2 class="Resume"><b>Resume</b></h2>
                     <a href="assets/images/bkrussowresume.jpg" download>
-                        <img src="assets/images/bkrussowresume.jpg" alt="resume picture">
+                        <img class="resumeimg" src="assets/images/bkrussowresume.jpg" alt="resume picture">
                     </a>
             </article>
             <article id="contact">
@@ -69,4 +69,5 @@
         </article>
     </div>
 </body>
+
 </html>
