Final html organizational changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div class="hero"></div>
-    <div class="page-content">
+    <aside class="hero"></aside>
+    <section class="page-content">
         <header class="header">
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
                 <nav>
@@ -23,50 +23,42 @@
                     </ul>
                 </nav>
         </header>
-
-            <article>
-                <div class="philosophy-1">
-                    <p>
-                        Efficiency is beauty
-                    </p>
-                </div>
-                <div class="philosophy-2">
-                    <p>
-                        Progress is hope
-                    </p>
-                </div>
-            </article>
-
-            <article id="about" class="aboutsection">
-                <h2 class="About"><b>About</b></h2>
-                    <p2 class="p2">
-                        I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I qualified the Pro Tour in 2020 ("Players Tour Series 1: Americas"), and placed in the top 100 competitors of that event. I aspire to one day win the world championship.
-                    </p2>
-            </article>
-
-            <div class="banner1"></div>
-
-            <article id="work" class="worksection">
-                <h2 class="Work"><b>Work</b></h2>
-                <a href="https://github.com/bkorbsquare/Module-1-Challenge">
-                    <img class="m1img" src="assets/images/challenge1index.jpg" alt="website screenshot">
+        <article class="philosophy-1">
+            <p>
+                Efficiency is beauty
+            </p>
+        </article>
+        <article class="philosophy-2">
+            <p>
+                Progress is hope
+            </p>
+        </article>
+        <article id="about" class="aboutsection">
+            <h2 class="About"><b>About</b></h2>
+                <p2 class="p2">
+                    I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I qualified the Pro Tour in 2020 ("Players Tour Series 1: Americas"), and placed in the top 100 competitors of that event. I aspire to one day win the world championship.
+                </p2>
+        </article>
+        <div class="banner1"></div>
+        <article id="work" class="worksection">
+            <h2 class="Work"><b>Work</b></h2>
+            <a href="https://github.com/bkorbsquare/Module-1-Challenge">
+                <img class="m1img" src="assets/images/challenge1index.jpg" alt="website screenshot">
+            </a>
+            <a href="https://github.com/bkorbsquare/Module-2-Challenge">
+                <img class="m2img" src="assets/images/challenge2.jpg" alt="website screenshot">
+            </a>
+            <a href="https://github.com/bkorbsquare/Module-3-Challenge">
+                <img class="m3img" src="assets/images/challenge3.jpg" alt="website screenshot">
+            </a>
+        </article>
+        <article id="resume" class="resumesection">
+            <h2 class="Resume"><b>Resume</b></h2>
+                <a href="assets/images/bkrussowresume.jpg" download>
+                    <img class="resumeimg" src="assets/images/bkrussowresume.jpg" alt="resume picture">
                 </a>
-                <a href="https://github.com/bkorbsquare/Module-2-Challenge">
-                    <img class="m2img" src="assets/images/challenge2.jpg" alt="website screenshot">
-                </a>
-                <a href="https://github.com/bkorbsquare/Module-3-Challenge">
-                    <img class="m3img" src="assets/images/challenge3.jpg" alt="website screenshot">
-                </a>
-            </article>
-
-            <article id="resume" class="resumesection">
-                <h2 class="Resume"><b>Resume</b></h2>
-                    <a href="assets/images/bkrussowresume.jpg" download>
-                        <img class="resumeimg" src="assets/images/bkrussowresume.jpg" alt="resume picture">
-                    </a>
-            </article>
-
-            <article id="contact">
+        </article>
+        <article id="contact">
             <footer class="footer">
                 <h2 class="Contact"><b>Contact</b></h2>
                     <nav>
@@ -78,9 +70,8 @@
                         </ul>
                     </nav>
             </footer>
-
         </article>
-    </div>
+    </section>
 </body>
 
 </html>
