Added some comments

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!--Coding Language-->
 <!DOCTYPE html>
+<!--Symantic langauge-->
 <html lang="en">
 
+<!--Container for metadata-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +12,15 @@
     <title>Brandon's Portfolio</title>
 </head>
 
+<!--Houses all the contents of the document-->
 <body>
+    <!--Styling for the large side image-->
     <aside class="hero"></aside>
+    <!--Styling for the rest of the page-->
     <section class="page-content">
+        <!--Styling for the 'header' element-->
         <header class="header">
+            <!--Styling for the main heading-->
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
                 <nav>
                     <ul>
@@ -23,11 +31,13 @@
                     </ul>
                 </nav>
         </header>
+        <!--Styling for the philosophy animation 1-->
         <article class="philosophy-1">
             <p>
                 Efficiency is beauty
             </p>
         </article>
+        <!--Styling for the philosophy animation 2-->
         <article class="philosophy-2">
             <p>
                 Progress is hope
@@ -39,6 +49,7 @@
                     I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I qualified the Pro Tour in 2020 ("Players Tour Series 1: Americas"), and placed in the top 100 competitors of that event. I aspire to one day win the world championship.
                 </p2>
         </article>
+        <!--Styling for the banner-->
         <div class="banner1"></div>
         <article id="work" class="worksection">
             <h2 class="Work"><b>Work</b></h2>
