Updated Media Queries and polished comments

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <body>
     <!--Styling for the large side image-->
     <aside class="hero"></aside>
-    <!--Styling for the rest of the page-->
+    <!--The main part of the page and it's style class-->
     <section class="page-content">
-        <!--Styling for the 'header' element-->
+        <!--The style class for the header element-->
         <header class="header">
-            <!--Styling for the main heading-->
+            <!--The most important heading and it's style class-->
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
+                <!--The navigation bar and it's clickable links-->
                 <nav>
                     <ul>
                         <li> <a href="#about">About</a></li>
@@ -31,47 +32,54 @@
                     </ul>
                 </nav>
         </header>
-        <!--Styling for the philosophy animation 1-->
+        <!--The first statement and it's style class-->
         <article class="philosophy-1">
             <p>
                 Efficiency is beauty
             </p>
         </article>
-        <!--Styling for the philosophy animation 2-->
+        <!--The second statement and it's style class-->
         <article class="philosophy-2">
             <p>
                 Progress is hope
             </p>
         </article>
+        <!--The About section and it's style class-->
         <article id="about" class="aboutsection">
             <h2 class="About"><b>About</b></h2>
                 <p2 class="p2">
                     I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I qualified the Pro Tour in 2020 ("Players Tour Series 1: Americas"), and placed in the top 100 competitors of that event. I aspire to one day win the world championship.
                 </p2>
         </article>
-        <!--Styling for the banner-->
+        <!--The Banner section and it's style class-->
         <div class="banner1"></div>
+        <!--The Work section and it's style class-->
         <article id="work" class="worksection">
             <h2 class="Work"><b>Work</b></h2>
+            <!--The clickable images of webpages and they're style classes-->
             <a href="https://github.com/bkorbsquare/Module-1-Challenge">
                 <img class="m1img" src="assets/images/challenge1index.jpg" alt="website screenshot">
             </a>
-            <a href="https://github.com/bkorbsquare/Module-2-Challenge">
+            <a href="https://bkorbsquare.github.io/Module-2-Challenge/">
                 <img class="m2img" src="assets/images/challenge2.jpg" alt="website screenshot">
             </a>
             <a href="https://github.com/bkorbsquare/Module-3-Challenge">
                 <img class="m3img" src="assets/images/challenge3.jpg" alt="website screenshot">
             </a>
         </article>
+        <!--The Resume section and it's style class-->
         <article id="resume" class="resumesection">
             <h2 class="Resume"><b>Resume</b></h2>
+                <!--The clickable image of the resume and it's style class-->
                 <a href="assets/images/bkrussowresume.jpg" download>
                     <img class="resumeimg" src="assets/images/bkrussowresume.jpg" alt="resume picture">
                 </a>
         </article>
+        <!--The Contact section and it's style class-->
         <article id="contact">
             <footer class="footer">
                 <h2 class="Contact"><b>Contact</b></h2>
+                    <!--The clickable contact links-->
                     <nav>
                         <ul>
                             <li> <a href="tel:+6124327545">612-432-7545</a></li>
