--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <article id="work" class="worksection">
             <h2 class="Work"><b>Work</b></h2>
             <!--The clickable images of webpages and they're style classes-->
-            <a href="https://github.com/bkorbsquare/Module-1-Challenge">
+            <a href="https://bkorbsquare.github.io/Project-1/">
                 <img class="m1img" src="assets/images/challenge1index.jpg" alt="website screenshot">
             </a>
-            <a href="https://bkorbsquare.github.io/Module-2-Challenge/">
-                <img class="m2img" src="assets/images/challenge2.jpg" alt="website screenshot">
+            <a href="https://bkorbsquare.github.io/Module-5-Challenge/">
+                <img class="m2img" src="assets/images/challenhttps://bkorbsquare.github.io/Module-2-Challengege2.jpg" alt="website screenshot">
             </a>
-            <a href="https://github.com/bkorbsquare/Module-3-Challenge">
+            <a href="https://bkorbsquare.github.io/Module-3-Challenge/">
                 <img class="m3img" src="assets/images/challenge3.jpg" alt="website screenshot">
             </a>
         </article>
