Updated resume and linkedin

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <article id="resume" class="resumesection">
             <h2 class="Resume"><b>Resume</b></h2>
                 <!--The clickable image of the resume and it's style class-->
-                <a href="assets/images/bkrussowresume.jpg" download>
-                    <img class="resumeimg" src="assets/images/bkrussowresume.jpg" alt="resume picture">
+                <a href="assets/images/resumeupdate.jpg" download>
+                    <img class="resumeimg" src="assets/images/resumeupdatebw.jpg" alt="resume picture">
                 </a>
         </article>
         <!--The Contact section and it's style class-->
@@ -85,7 +85,7 @@
                             <li> <a href="tel:+6124327545">612-432-7545</a></li>
                             <li> <a href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
                             <li> <a href="https://github.com/bkorbsquare">Github</a></li>
-                            <li> <a href="https://www.facebook.com/brandon.krussow">Facebook</a></li>
+                            <li> <a href="https://www.linkedin.com/in/brandon-krussow-bb9960151/">Linkedin</a></li>
                         </ul>
                     </nav>
             </footer>
