--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <article id="work" class="worksection">
             <h2 class="Work"><b>Work</b></h2>
             <!--The clickable images of webpages and they're style classes-->
-            <a href="https://bkorbsquare.github.io/Project-1/">
-                <img class="m1img" src="assets/images/Project1screenshotbw.jpg" alt="website screenshot">
+            <a href="https://git.heroku.com/basementbartrivia.git">
+                <img class="m1img" src="assets/images/project3.png" alt="website screenshot">
             </a>
             <a href="https://bkorbsquare.github.io/Module-5-Challenge/">
                 <img class="m2img" src="assets/images/Module-5-Challengescreenshotbw.jpg" alt="website screenshot">
