--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <article id="work" class="worksection">
             <h2 class="Work"><b>Work</b></h2>
             <!--The clickable images of webpages and they're style classes-->
-            <a href="https://git.heroku.com/basementbartrivia.git">
+            <a href="https://salty-ridge-35552.herokuapp.com/">
                 <img class="m1img" src="assets/images/project3.png" alt="website screenshot">
             </a>
             <a href="https://bkorbsquare.github.io/Module-5-Challenge/">
