--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!--Coding Language-->
+<!--Coding language-->
 <!DOCTYPE html>
-<!--Symantic langauge-->
+<!--Semantic language-->
 <html lang="en">
 
 <!--Container for metadata-->
@@ -48,7 +48,7 @@
         <article id="about" class="aboutsection">
             <h2 class="About"><b>About</b></h2>
                 <p2 class="p2">
-                    I run a table top games store in South Minneapolis, MN. I'm studying coding right now. In my free time I play Magic the Gathering at the highest level I can. I qualified the Pro Tour in 2020 ("Players Tour Series 1: Americas"), and placed in the top 100 competitors of that event. I aspire to one day win the world championship.
+                    I manage a table top games store in South Minneapolis, MN. I'm studying coding right now, and I recently obtained a Full-Stack Web Development Certificate. In my free time I play competitive card games. 
                 </p2>
         </article>
         <!--The Banner section and it's style class-->
@@ -71,7 +71,7 @@
         <article id="resume" class="resumesection">
             <h2 class="Resume"><b>Resume</b></h2>
                 <!--The clickable image of the resume and it's style class-->
-                <a href="assets/images/resumeupdate.jpg" download>
+                <a href="assets/images/bkrussowresume (3).pdf" download>
                     <img class="resumeimg" src="assets/images/resumeupdatebw.jpg" alt="resume picture">
                 </a>
         </article>
