--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <article id="resume" class="resumesection">
             <h2 class="Resume"><b>Resume</b></h2>
                 <!--The clickable image of the resume and it's style class-->
-                <a href="assets/images/bkrussowresume (4).pdf" download>
+                <a href="assets/images/bkrussowresume2.0.pdf" download>
                     <img class="resumeimg" src="assets/images/resumeupdatebw.jpg" alt="resume picture">
                 </a>
         </article>
