--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!--Coding language-->
 <!DOCTYPE html>
-<!--Semantic language-->
-<html lang="en">
+<!--Semantic language & theme for light/dark-->
+<html lang="en" data-theme="light">
 
 <!--Container for metadata-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- Link to custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Link to JavaScript file -->
+    <script defer src="./assets/js/script.js"></script>
     <title>Brandon's Portfolio</title>
 </head>
 
@@ -23,13 +28,15 @@
             <!--The most important heading and it's style class-->
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
                 <!--The navigation bar and it's clickable links-->
-                <nav>
-                    <ul>
-                        <li> <a href="#about">About</a></li>
-                        <li> <a href="#work">Work</a></li>
-                        <li> <a href="#resume">Resume</a></li>
-                        <li> <a href="#contact">Contact</a></li>
-                    </ul>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container d-flex justify-content-center">
+                        <ul class="navbar-nav">
+                            <li> <a class="nav-link btn navbar-btn" href="#about">About</a></li>
+                            <li> <a class="nav-link btn navbar-btn" href="#work">Work</a></li>
+                            <li> <a class="nav-link btn navbar-btn" href="#resume">Resume</a></li>
+                            <li> <a class="nav-link btn navbar-btn" href="#contact">Contact</a></li>
+                        </ul>
+                    </div>
                 </nav>
         </header>
         <!--The first statement and it's style class-->
@@ -48,7 +55,7 @@
         <article id="about" class="aboutsection">
             <h2 class="About"><b>About</b></h2>
                 <p2 class="p2">
-                    I manage a table top games store in South Minneapolis, MN. I'm studying coding right now, and I recently obtained a Full-Stack Web Development Certificate. In my free time I play competitive card games. 
+                    I'm studying coding right now. I recently obtained a Full-Stack Web Development Certificate from the University of Minnesota, as well as a CS50 (Introduction to Computer Science) Certificate from Harvard University. In my free time I play competitive card games. 
                 </p2>
         </article>
         <!--The Banner section and it's style class-->
@@ -80,13 +87,15 @@
             <footer class="footer">
                 <h2 class="Contact"><b>Contact</b></h2>
                     <!--The clickable contact links-->
-                    <nav>
-                        <ul>
-                            <li> <a href="tel:+6124327545">612-432-7545</a></li>
-                            <li> <a href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
-                            <li> <a href="https://github.com/bkorbsquare">Github</a></li>
-                            <li> <a href="https://www.linkedin.com/in/brandon-krussow-bb9960151/">Linkedin</a></li>
-                        </ul>
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <div class="container d-flex justify-content-center">
+                            <ul class="navbar-nav">
+                                <li> <a class="nav-link btn navbar-btn" href="tel:+6124327545">612-432-7545</a></li>
+                                <li> <a class="nav-link btn navbar-btn" href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
+                                <li> <a class="nav-link btn navbar-btn" href="https://github.com/bkorbsquare">Github</a></li>
+                                <li> <a class="nav-link btn navbar-btn" href="https://www.linkedin.com/in/brandon-krussow-bb9960151/">Linkedin</a></li>
+                            </ul>
+                        </div>
                     </nav>
             </footer>
         </article>
