Light/Dark; Collapse Animation

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                         </ul>
                     </div>
                 </nav>
+                <div class="theme-switch">
+                    <label class="switch">
+                        <input type="checkbox" id="theme-switcher">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
         </header>
         <!--The first statement and it's style class-->
         <article class="philosophy-1">
