--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <!--Container for metadata-->
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="assets/images/bkfavicontransparent.png"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link to Handlebars-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
     <!-- Link to Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- Link to custom CSS -->
@@ -26,15 +29,16 @@
         <!--The style class for the header element-->
         <header class="header">
             <!--The most important heading and it's style class-->
+            <a href="index.html">
             <h1 class="brandon-krussow"><b>Brandon Krussow</b></h1>
+            </a>
                 <!--The navigation bar and it's clickable links-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container d-flex justify-content-center">
                         <ul class="navbar-nav">
                             <li> <a class="nav-link btn navbar-btn" href="#about">About</a></li>
-                            <li> <a class="nav-link btn navbar-btn" href="#work">Work</a></li>
+                            <li> <a class="nav-link btn navbar-btn" href="#work">Projects</a></li>
                             <li> <a class="nav-link btn navbar-btn" href="#resume">Resume</a></li>
-                            <li> <a class="nav-link btn navbar-btn" href="#contact">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -57,6 +61,11 @@
                 Progress is hope
             </p>
         </article>
+        <!-- Handlebars templates -->
+        <div id="content">
+            <!-- This div will be populated by Handlebars -->
+        </div>
+
         <!--The About section and it's style class-->
         <article id="about" class="aboutsection">
             <h2 class="About"><b>About</b></h2>
@@ -67,17 +76,14 @@
         <!--The Banner section and it's style class-->
         <div class="banner1"></div>
         <!--The Work section and it's style class-->
-        <article id="work" class="worksection">
-            <h2 class="Work"><b>Work</b></h2>
+        <h2 class="Work"><b>Projects</b></h2>
+        <article id="work" class="image-container">
             <!--The clickable images of webpages and they're style classes-->
             <a href="https://salty-ridge-35552.herokuapp.com/">
                 <img class="m1img" src="assets/images/project3.png" alt="website screenshot">
             </a>
             <a href="https://bkorbsquare.github.io/Module-5-Challenge/">
                 <img class="m2img" src="assets/images/Module-5-Challengescreenshotbw.jpg" alt="website screenshot">
-            </a>
-            <a href="https://bkorbsquare.github.io/Module-3-Challenge/">
-                <img class="m3img" src="assets/images/Module-3-Challengescreenshotbw.jpg" alt="website screenshot">
             </a>
         </article>
         <!--The Resume section and it's style class-->
@@ -86,6 +92,9 @@
                 <!--The clickable image of the resume and it's style class-->
                 <a href="assets/images/bkrussowresume2.0.pdf" download>
                     <img class="resumeimg" src="assets/images/resumeupdatebw.jpg" alt="resume picture">
+                </a>
+                <a href="assets/images/BKrussowReferences (1).pdf" download>
+                    <img class="resumeimg" src="assets/images/references.JPG" alt="references picture">
                 </a>
         </article>
         <!--The Contact section and it's style class-->
