--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container d-flex justify-content-center">
                         <ul class="navbar-nav">
-                            <li> <a class="nav-link btn navbar-btn" href="#about">About</a></li>
-                            <li> <a class="nav-link btn navbar-btn" href="#work">Projects</a></li>
-                            <li> <a class="nav-link btn navbar-btn" href="#resume">Resume</a></li>
-                        </ul>
+                            <li><a class="nav-link btn navbar-btn" id="about-link">About</a></li>
+                            <li><a class="nav-link btn navbar-btn" id="projects-link">Projects</a></li>
+                            <li><a class="nav-link btn navbar-btn" id="resume-link">Resume</a></li>
+                        </ul>                        
                     </div>
                 </nav>
                 <div class="theme-switch">
