Handlebars, navbars, images

--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
         </header>
 
         <!--The divs for the different templates-->
-        <div id="philosophy"></div>
-        <div id="about"></div>
-        <div id="projects"></div>
-        <div id="resume"></div>
+        <div class="templateContainer">
+            <div class="flex-item" id="philosophy"></div>
+            <div class="flex-item" id="about"></div>
+            <div class="flex-item" id="projects"></div>
+            <div class="flex-item" id="resume"></div>
+        </div>
 
         <!--The Contact section and it's style class-->
-        <article id="contact">
+        <article id="contact" class="contact">
             <footer class="footer">
                 <h2 class="Contact"><b>Contact</b></h2>
                     <!--The clickable contact links-->
