Media Query updates

--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                             <div class="container d-flex justify-content-center">
                                 <ul class="navbar-nav">
-                                    <li> <a class="nav-link btn navbar-btn" href="tel:+6124327545">612-432-7545</a></li>
-                                    <li> <a class="nav-link btn navbar-btn" href="mailto:bkorbsquare@gmail.com">bkorbsquare@gmail.com</a></li>
-                                    <li> <a class="nav-link btn navbar-btn" href="https://github.com/bkorbsquare">Github</a></li>
-                                    <li> <a class="nav-link btn navbar-btn" href="https://www.linkedin.com/in/brandon-krussow-bb9960151/">Linkedin</a></li>
+                                    <li> <a class="nav-link btn navbar-btn" id="email" href="mailto:bkorbsquare@gmail.com">Email</a></li>
+                                    <li> <a class="nav-link btn navbar-btn" id="github" href="https://github.com/bkorbsquare">Github</a></li>
+                                    <li> <a class="nav-link btn navbar-btn" id="linkedin" href="https://www.linkedin.com/in/brandon-krussow-bb9960151/">Linkedin</a></li>
                                 </ul>
                             </div>
                         </nav>
