--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                             <div class="container d-flex justify-content-center">
                                 <ul class="navbar-nav">
                                     <li> <a class="nav-link btn navbar-btn" id="email" href="mailto:bkorbsquare@gmail.com">Email</a></li>
-                                    <li> <a class="nav-link btn navbar-btn" id="github" href="https://github.com/bkorbsquare">Github</a></li>
-                                    <li> <a class="nav-link btn navbar-btn" id="linkedin" href="https://www.linkedin.com/in/brandon-krussow-bb9960151/">Linkedin</a></li>
+                                    <li> <a class="nav-link btn navbar-btn" id="github" href="https://github.com/bkorbsquare" target="_blank">Github</a></li>
+                                    <li> <a class="nav-link btn navbar-btn" id="linkedin" href="https://www.linkedin.com/in/brandon-krussow-bb9960151/" target="_blank">Linkedin</a></li>
                                 </ul>
                             </div>
                         </nav>
